--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon --exec ts-node src/app.ts",
     "build": "tsc",
     "seed": "ts-node src/seeder.ts",
-    "test": "jest"
+    "test": "jest src/controllers/*.test.ts"
   },
   "keywords": [],
   "author": "",
