--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "start": "node dist/app.js",
     "dev": "nodemon --exec ts-node src/app.ts",
     "build": "tsc",
-    "seed": "ts-node src/seeder.ts",
-    "test": "jest src/controllers/*.test.ts"
+    "seed": "ts-node src/seeder.ts"
   },
   "keywords": [],
   "author": "",
@@ -24,13 +23,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/jest": "^30.0.0",
     "@types/node": "^24.2.1",
-    "@types/supertest": "^6.0.3",
-    "jest": "^30.0.5",
     "nodemon": "^3.1.10",
-    "supertest": "^7.1.4",
-    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
