--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "start": "node dist/app.js",
     "dev": "nodemon --exec ts-node src/app.ts",
     "build": "tsc",
-    "seed": "ts-node src/seeder.ts",
-    "test": "jest src/controllers/*.test.ts"
+    "seed": "ts-node src/seeder.ts"
   },
   "keywords": [],
   "author": "",
