--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@types/multer": "^2.0.0",
+    "@types/node-fetch": "^2.6.13",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
+    "form-data": "^4.0.4",
     "mongoose": "^8.17.1",
+    "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "vgurad": "file:.."
   },
   "devDependencies": {
