Add react-helmet-async and improve SEO metadata
Introduces react-helmet-async for managing document head and SEO metadata. Updates Admin and Index pages to set dynamic titles and descriptions for each route, improving search engine optimization and user experience. Also updates QuickActionCard button label and refines frontend dependencies.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
-    "@splinetool/react-spline": "^4.1.0"
+    "@splinetool/react-spline": "^4.1.0",
+    "@tanstack/react-query": "^5.85.5",
+    "@types/react-router-dom": "^5.3.3",
+    "lucide-react": "^0.540.0",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^7.8.1"
   },
   "name": "vgurad",
   "description": "vGuard is a full-stack application designed to help farmers and agricultural professionals identify and manage crop diseases effectively. The platform leverages AI-powered image recognition to detect diseases from crop images, provides a comprehensive database of crop diseases, and offers expert advice and agricultural tips.",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix backend && npm run build --prefix frontend",
     "start": "npm run start --prefix backend",
