--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,6 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "preview": "vite preview",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -89,6 +88,7 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-pwa": "^1.0.3"
   }
 }
