--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -27,9 +27,26 @@
       "src": "/favicon.ico",
       "sizes": "48x48",
       "type": "image/x-icon"
+    },
+    {
+      "src": "/pwa-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/pwa-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
-  "categories": ["agriculture", "farming", "ai", "productivity"],
+  "categories": [
+    "agriculture",
+    "farming",
+    "ai",
+    "productivity"
+  ],
   "lang": "en",
   "scope": "/",
   "dir": "ltr"
